# matriz

./: Cargo.toml  README.md
benches/: nalgebra.rs
src/: array.rs  lib.rs  matrix.rs  scalar.rs  vector.rs
