[package]
name = "matriz"
version = "0.0.1"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
license = "MIT"
description = "Zero allocation Rust linear algebra library"
repository = "https://github.com/reu/matriz"
categories = ["mathematics", "no-std"]
keywords = ["math", "linear", "algebra", "matrix", "vector"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
full = ["std"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
nalgebra = "0.32.2"

[[bench]]
name = "nalgebra"
harness = false
